[workspace]
resolver = "2"
members = ["rust", "relay-client"]

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-relay-messages"
rust-version = "1.82.0"                                        # See rust-version.toml

[workspace.dependencies]
# first party
orb-relay-messages = { path = "rust" }

# third party
async-stream = "0.3.6"
flume = "0.11.1"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-build = "0.12.2"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.13"
uuid = "1.11.0"
derive_more = { version = "0.99" }
tracing = "0.1"
bon = "3.3.2"
secrecy = "0.10.3"
