[workspace]
resolver = "2"
members = ["rust", "relay-client", "test-utils"]

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-relay-messages"
rust-version = "1.88.0"                                        # See rust-version.toml

[workspace.dependencies]
# first party
orb-qr-link = { git = "https://github.com/worldcoin/orb-software.git", rev = "a807c0de0729a5a899b7c887da8bcecf2881e300" }
orb-relay-client = { path = "relay-client" }
orb-relay-messages = { path = "rust" }
orb-relay-test-utils = { path = "test-utils" }

# third party
async-stream = "0.3.6"
flume = "0.11.1"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
tonic-prost = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.13"
uuid = "1.11.0"
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1"
bon = "3.8.1"
secrecy = "0.10.3"
pollster = "0.4.0"
