[package]
name = "orb-relay-messages"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
client = []
server = []

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, features = ["tls"] }

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
