[package]
name = "orb-relay-messages"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
client = []
server = []

[dependencies]
blake3 = "1"
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, features = ["tls"] }

[dev-dependencies]
orb-qr-link.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
