[package]
name = "orb-relay-test-utils"
version = "0.0.1"
description = """
test-utils for orb-relay-client
"""
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orb-relay-messages = { workspace = true, features = ["client", "server"] }

async-stream.workspace = true
tokio = { workspace = true, fetures = ["full"] }
tonic = { workspace = true, features = ["tls-roots"] }
tokio-stream.workspace = true
flume.workspace = true
pollster.workspace = true
